--- a/myplaybook.yml
+++ b/myplaybook.yml
@@ -14,13 +14,16 @@
     service:
      name: apache2
      state: started
+    when: ansible_os_family=="Debian"
 
   - name: i want install webserver on only redhat nodes
     yum:
      name: httpd
      state: present
+    when: ansible_os_family=="RedHat"
 
   - name: i want start webserver on only redhat nodes
     service:
      name: httpd
      state: started 
+    when: ansible_os_family=="RedHat"
