--- a/myplaybook.yml
+++ b/myplaybook.yml
@@ -2,7 +2,7 @@
 - hosts: webserver
   become: yes
   tasks:
-  - name : i want install webserver on only ubuntu nodes
+  - name : i want install java on only ubuntu nodes
     apt: 
      name: "{{installjavapackforubuntu}}"
      state: present
@@ -10,19 +10,19 @@
 
 
 
-  - name: i want start webserver on only ubuntu nodes
+  - name: i want start java on only ubuntu nodes
     service:
      name: "{{installjavapackforubuntu}}"
      state: started
     when: ansible_os_family=="Debian"
 
-  - name: i want install webserver on only redhat nodes
+  - name: i want install java on only redhat nodes
     yum:
      name: "{{installjavapackforredhat}}"
      state: present
     when: ansible_os_family=="RedHat"
 
-  - name: i want start webserver on only redhat nodes
+  - name: i want start java on only redhat nodes
     service:
      name: "{{installjavapackforredhat}}"
      state: started 
